导航悬浮和workflow动画

--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
   top: 100%;
   left: 0;
   transform: translateY(10px);
-  width: 824px;
-  max-height: 370px;
+  width: 670px;
+  max-height: 400px;
   background: rgba(20, 20, 20, 0.98);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
@@ -335,6 +335,51 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 0.75rem;
+}
+
+/* ===== Solutions 下拉面板专属样式 ===== */
+.solutions-dropdown {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  height: 268px; /* 固定高度，匹配 Feature 的实际高度 */
+  overflow: hidden;
+}
+
+/* Solutions 描述文字独占一行 */
+.dropdown-desc-solo {
+  font-size: 13px;
+  line-height: 1.8;
+  color: rgba(255, 255, 255, 0.7);
+  margin: 0 0 0.5rem 0;
+  text-align: left;
+}
+
+/* Solutions 卡片布局 - 4列 */
+.solutions-cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0rem; /* 减少图片间距 */
+}
+
+/* Solutions 卡片尺寸 - 使用固定宽高 */
+.solutions-cards .dropdown-card {
+  width: 135px;
+  height: 190px;
+}
+
+/* Solutions 卡片标题样式 - 减小字体 */
+.solutions-cards .card-overlay h3 {
+  font-size: 9px;
+  font-weight: 700;
+  line-height: 1.3;
+  margin: 0;
+  color: var(--color-text);
+}
+
+/* Solutions 卡片不显示副文字 */
+.solutions-cards .card-overlay p {
+  display: none;
 }
 
 .dropdown-card {
@@ -473,13 +518,50 @@
                 <p class="dropdown-subtitle">Create contents that resonates</p>
                 <a href="#" class="dropdown-cta">Start Engine</a>
                 <div class="dropdown-image">
-                  <img src="sections/adaptation/5.png" alt="Feature showcase">
+                  <img src="sections/navigation/5.png" alt="Feature showcase">
                 </div>
               </div>
             </div>
           </div>
         </li>
-        <li><a href="#solutions">Solutions</a></li>
+        <li class="nav-item-dropdown">
+          <a href="#solutions">Solutions</a>
+          <!-- Solutions 下拉面板 -->
+          <div class="nav-dropdown">
+            <div class="dropdown-container solutions-dropdown">
+              <!-- 描述文字 -->
+              <p class="dropdown-desc-solo">Treclipse unites artistry and intelligence to create cinematic visuals<br> that resonate.</p>
+
+              <!-- 四个解决方案卡片 -->
+              <div class="dropdown-cards solutions-cards">
+                <div class="dropdown-card">
+                  <img src="sections/navigation/1.png" alt="Brands & Marketers">
+                  <div class="card-overlay">
+                    <h3>Brands<br>& Marketers</h3>
+                  </div>
+                </div>
+                <div class="dropdown-card">
+                  <img src="sections/navigation/2.jpg" alt="Agencies & Enterprise">
+                  <div class="card-overlay">
+                    <h3>Agencies<br>& Enterprise</h3>
+                  </div>
+                </div>
+                <div class="dropdown-card">
+                  <img src="sections/navigation/4.png" alt="Creators & Filmmakers">
+                  <div class="card-overlay">
+                    <h3>Creators<br>& Filmmakers</h3>
+                  </div>
+                </div>
+                <div class="dropdown-card">
+                  <img src="sections/navigation/3.png" alt="Artists & Designers">
+                  <div class="card-overlay">
+                    <h3>Artists<br>& Designers</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
         <li><a href="#resources">Resources</a></li>
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#ai-studio" class="btn-style">Eclipse Engine</a></li>
@@ -2171,17 +2253,9 @@
   overflow: hidden;
   aspect-ratio: 3 / 3.22; /* 稍微偏高一点 */
   cursor: pointer;
-  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1); /* 使用缓动函数实现流畅动画 */
+  transition: opacity 0.25s ease, transform 0.25s ease; /* 只过渡需要的属性 */
   opacity: 1;
   transform: scale(1);
-  z-index: 1; /* 默认层级 */
-}
-
-/* 悬浮时显著放大 */
-.use-cases__card:hover {
-  transform: scale(1.15); /* 放大 15% - 非常明显 */
-  z-index: 10; /* 提升层级，确保在其他卡片之上 */
-  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5); /* 添加阴影增强立体感 */
 }
 
 .use-cases__card.hidden {
@@ -2989,9 +3063,8 @@
 
 /* 卡片网格 */
 .workflow__cards {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap:27px; /* 减少卡片间距 */
+  display: flex;
+  gap: 27px; /* 减少卡片间距 */
   max-width: 1400px; /* 增加最大宽度，让卡片变宽，文字描述能一行显示更多 */
   margin: 0 auto;
   padding: 0 var(--spacing-lg);
@@ -3000,16 +3073,25 @@
 /* 单个卡片 */
 .workflow__card {
   position: relative;
+  flex: 1 1 0; /* 默认平均分配空间 */
   aspect-ratio: 3 / 6.1;
   border-radius: 20px;
   overflow: hidden;
   cursor: pointer;
-  transition: transform var(--transition);
+  transition: flex 0.5s cubic-bezier(0.4, 0, 0.2, 1); /* 只过渡flex属性 */
   background: #000000;
+  will-change: flex; /* 性能优化 */
 }
 
+/* 悬浮状态：只增加宽度 */
 .workflow__card:hover {
-  transform: translateY(-8px);
+  flex: 2.5 1 0; /* 悬浮时占据更多宽度空间 */
+  z-index: 10; /* 确保悬浮卡片在最上层 */
+}
+
+/* 当有卡片悬浮时，其他卡片收缩 */
+.workflow__cards:has(.workflow__card:hover) .workflow__card:not(:hover) {
+  flex: 0.6 1 0; /* 未悬浮卡片收缩宽度 */
 }
 
 /* 卡片图片 */
@@ -3054,6 +3136,18 @@
     transparent 100%
   );
   z-index: 1;
+  opacity: 1;
+  transition: opacity 0.3s ease; /* 淡出过渡 */
+}
+
+/* 悬浮时叠加层消失 */
+.workflow__card:hover .workflow__card-overlay {
+  opacity: 0;
+}
+
+/* 当有卡片悬浮时，所有未悬浮卡片的叠加层也淡出 */
+.workflow__cards:has(.workflow__card:hover) .workflow__card:not(:hover) .workflow__card-overlay {
+  opacity: 0;
 }
 
 /* 文字内容区域 */
@@ -3064,6 +3158,20 @@
   right: 0;
   padding: var(--spacing-lg);
   z-index: 2;
+  opacity: 1;
+  transition: opacity 0.3s ease; /* 淡出过渡 */
+}
+
+/* 悬浮时文字消失 */
+.workflow__card:hover .workflow__card-content {
+  opacity: 0;
+  pointer-events: none; /* 禁用交互 */
+}
+
+/* 当有卡片悬浮时，所有未悬浮卡片的文字也淡出 */
+.workflow__cards:has(.workflow__card:hover) .workflow__card:not(:hover) .workflow__card-content {
+  opacity: 0;
+  pointer-events: none; /* 禁用交互 */
 }
 
 .workflow__card-title {
@@ -3096,7 +3204,21 @@
   }
 
   .workflow__cards {
+    display: grid; /* 平板端恢复grid布局 */
     grid-template-columns: repeat(2, 1fr);
+    height: auto; /* 取消固定高度 */
+  }
+
+  /* 平板端取消悬浮动画 */
+  .workflow__card {
+    flex: none;
+    height: auto; /* 取消固定高度 */
+    aspect-ratio: 3 / 6.1; /* 恢复原始比例 */
+  }
+
+  .workflow__card:hover {
+    flex: none;
+    transform: translateY(-8px); /* 简单的上移效果 */
   }
 }
 
@@ -3262,6 +3384,19 @@
     console.log('✅ Workflow module initialized');
 
     const cards = document.querySelectorAll('.workflow__card');
+
+    // 记录每张卡片的原始高度
+    const originalHeights = new Map();
+
+    // 等待布局稳定后记录高度
+    setTimeout(() => {
+      cards.forEach(card => {
+        const height = card.offsetHeight;
+        originalHeights.set(card, height);
+        // 设置固定高度为内联样式
+        card.style.height = `${height}px`;
+      });
+    }, 100);
 
     // 图片加载错误处理
     cards.forEach(card => {
