--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
   top: 100%;
   left: 0;
   transform: translateY(10px);
-  width: 670px;
-  max-height: 400px;
+  width: 820px;
+  height: 345px; /* 固定高度，不使用 max-height */
   background: rgba(20, 20, 20, 0.98);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
@@ -334,15 +334,32 @@
 .dropdown-cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 0.75rem;
+  gap: 1rem; /* 增加图片间距 */
+}
+
+/* ===== Features 下拉面板专属样式 ===== */
+.dropdown-cards .dropdown-card {
+  width: 145px;
+  height: 195px;
+}
+
+/* ===== Resources 下拉面板专属样式 ===== */
+/* Resources 卡片不显示副文字 */
+.nav-item-dropdown:nth-child(3) .dropdown-cards .card-overlay p {
+  display: none;
 }
 
 /* ===== Solutions 下拉面板专属样式 ===== */
+/* Solutions 外层容器宽度控制 */
+.nav-item-dropdown:nth-child(2) .nav-dropdown {
+  width: 665px; /* Solutions 专属宽度 */
+}
+
 .solutions-dropdown {
   display: flex;
   flex-direction: column;
-  gap: 1.25rem;
-  height: 268px; /* 固定高度，匹配 Feature 的实际高度 */
+  gap: 2.5rem; /* 减少内部元素间距 */
+  height: 345px; /* 固定高度，与 Features 一致 */
   overflow: hidden;
 }
 
@@ -351,15 +368,16 @@
   font-size: 13px;
   line-height: 1.8;
   color: rgba(255, 255, 255, 0.7);
-  margin: 0 0 0.5rem 0;
+  margin: 0.75rem 0 0 0; /* 增加上边距 */
+  padding-left: 0.5rem; /* 增加左边距 */
   text-align: left;
 }
 
 /* Solutions 卡片布局 - 4列 */
 .solutions-cards {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 0rem; /* 减少图片间距 */
+  display: flex;
+  justify-content: center; /* 居中对齐 */
+  gap: 1.3rem; /* 减少图片间距 */
 }
 
 /* Solutions 卡片尺寸 - 使用固定宽高 */
@@ -368,23 +386,45 @@
   height: 190px;
 }
 
-/* Solutions 卡片标题样式 - 减小字体 */
-.solutions-cards .card-overlay h3 {
-  font-size: 9px;
-  font-weight: 700;
-  line-height: 1.3;
-  margin: 0;
-  color: var(--color-text);
-}
-
 /* Solutions 卡片不显示副文字 */
 .solutions-cards .card-overlay p {
   display: none;
 }
 
+/* ===== Pricing 下拉面板专属样式 ===== */
+/* Pricing 外层容器宽度控制 */
+.nav-item-dropdown:nth-child(4) .nav-dropdown {
+  width: 355px; /* Pricing 专属宽度，约为 Solutions 的一半 */
+}
+
+.pricing-dropdown {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem; /* 减少描述文字和图片之间的间距 */
+  height: 345px;
+  overflow: hidden;
+}
+
+/* Pricing 卡片布局 - 2列 */
+.pricing-cards {
+  display: flex;
+  justify-content: center;
+  gap: 1.3rem;
+}
+
+/* Pricing 卡片尺寸 - 使用固定宽高 */
+.pricing-cards .dropdown-card {
+  width: 135px;
+  height: 190px;
+}
+
+/* Pricing 卡片不显示副文字 */
+.pricing-cards .card-overlay p {
+  display: none;
+}
+
 .dropdown-card {
   position: relative;
-  aspect-ratio: 1 / 1.5;
   border-radius: 6px;
   overflow: hidden;
   cursor: pointer;
@@ -413,10 +453,11 @@
 }
 
 .card-overlay h3 {
-  font-size: 14px;
+  font-size: 12px; /* 字体大小 */
   font-weight: 700;
   margin: 0 0 0.25rem 0;
   color: var(--color-text);
+  max-width: 200px; /* 增大 max-width，减少换行 */
 }
 
 .card-overlay p {
@@ -562,8 +603,80 @@
             </div>
           </div>
         </li>
-        <li><a href="#resources">Resources</a></li>
-        <li><a href="#pricing">Pricing</a></li>
+        <li class="nav-item-dropdown">
+          <a href="#resources">Resources</a>
+          <!-- Resources 下拉面板 -->
+          <div class="nav-dropdown">
+            <div class="dropdown-container">
+              <!-- 左侧区域 -->
+              <div class="dropdown-left-section">
+                <!-- 描述文字 -->
+                <p class="dropdown-desc">Discover everything Treclipse can do. Generate <br>cinematic videos, design AI imagery, and build brand<br> identities.</p>
+
+                <!-- 三个功能卡片 -->
+                <div class="dropdown-cards">
+                  <div class="dropdown-card">
+                    <img src="sections/adaptation/1.png" alt="Create">
+                    <div class="card-overlay">
+                      <h3>Create</h3>
+                      <p>Image Generator<br>Video Generator</p>
+                    </div>
+                  </div>
+                  <div class="dropdown-card">
+                    <img src="sections/adaptation/2.jpg" alt="Compose">
+                    <div class="card-overlay">
+                      <h3>Compose</h3>
+                      <p>Timeline Editor<br>Storyboard<br>Assistant</p>
+                    </div>
+                  </div>
+                  <div class="dropdown-card">
+                    <img src="sections/adaptation/3.png" alt="Studio">
+                    <div class="card-overlay">
+                      <h3>Studio</h3>
+                      <p>Avatar<br>Brand Kit<br>Assistant</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- 右侧框 -->
+              <div class="dropdown-right-section">
+                <h2 class="dropdown-title">WHERE IMAGINATION ECLIPSES REALITY.</h2>
+                <p class="dropdown-subtitle">Create contents that resonates</p>
+                <a href="#" class="dropdown-cta">Start Engine</a>
+                <div class="dropdown-image">
+                  <img src="sections/navigation/5.png" alt="Feature showcase">
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="nav-item-dropdown">
+          <a href="#pricing">Pricing</a>
+          <!-- Pricing 下拉面板 -->
+          <div class="nav-dropdown">
+            <div class="dropdown-container pricing-dropdown">
+              <!-- 描述文字 -->
+              <p class="dropdown-desc-solo">Treclipse unites artistry and intelligence to create cinematic visuals<br> that resonate.</p>
+
+              <!-- 两个卡片 -->
+              <div class="dropdown-cards pricing-cards">
+                <div class="dropdown-card">
+                  <img src="sections/navigation/1.png" alt="Plan 1">
+                  <div class="card-overlay">
+                    <h3>Basic Plan</h3>
+                  </div>
+                </div>
+                <div class="dropdown-card">
+                  <img src="sections/navigation/2.jpg" alt="Plan 2">
+                  <div class="card-overlay">
+                    <h3>Pro Plan</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
         <li><a href="#ai-studio" class="btn-style">Eclipse Engine</a></li>
       </ul>
     </div>
