--- a/sections/navigation/navigation.html
+++ b/sections/navigation/navigation.html
@@ -483,9 +483,9 @@
   <div class="nav-container">
     <!-- 左侧区域：Logo + 导航菜单 -->
     <div class="nav-left">
-      <div class="nav-logo">
+      <a href="index.html" class="nav-logo">
         <img src="sections/navigation/logo.png" alt="TreClip" class="logo-img">
-      </div>
+      </a>
 
       <ul class="nav-menu">
         <li class="nav-item-dropdown">
@@ -537,7 +537,7 @@
           </div>
         </li>
         <li class="nav-item-dropdown">
-          <a href="#solutions">Solutions</a>
+          <a href="solutions.html">Solutions</a>
           <!-- Solutions 下拉面板 -->
           <div class="nav-dropdown">
             <div class="dropdown-container solutions-dropdown">
@@ -546,30 +546,30 @@
 
               <!-- 四个解决方案卡片 -->
               <div class="dropdown-cards solutions-cards">
-                <div class="dropdown-card">
+                <a href="solutions.html" class="dropdown-card">
                   <img src="sections/navigation/1.png" alt="Brands & Marketers">
                   <div class="card-overlay">
                     <h3>Brands<br>& Marketers</h3>
                   </div>
-                </div>
-                <div class="dropdown-card">
+                </a>
+                <a href="solutions.html" class="dropdown-card">
                   <img src="sections/navigation/2.jpg" alt="Agencies & Enterprise">
                   <div class="card-overlay">
                     <h3>Agencies<br>& Enterprise</h3>
                   </div>
-                </div>
-                <div class="dropdown-card">
+                </a>
+                <a href="solutions.html" class="dropdown-card">
                   <img src="sections/navigation/4.png" alt="Creators & Filmmakers">
                   <div class="card-overlay">
                     <h3>Creators<br>& Filmmakers</h3>
                   </div>
-                </div>
-                <div class="dropdown-card">
+                </a>
+                <a href="solutions.html" class="dropdown-card">
                   <img src="sections/navigation/3.png" alt="Artists & Designers">
                   <div class="card-overlay">
                     <h3>Artists<br>& Designers</h3>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
           </div>
