1. 更新solutions页面的间距细节与字体，新增workflow_sl模块； 2. 新增compose页面，包括compose、brand-control_cmps、workflow_cmps模块

--- a/sections/ROI/ROI.html
+++ b/sections/ROI/ROI.html
@@ -20,15 +20,17 @@
 }
 
 .roi-label {
+  font-family: 'Sora', sans-serif;
   font-size: 1.25rem;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: var(--color-text-secondary);
   margin-bottom: var(--spacing-sm);
-  font-weight: 600;
+  font-weight: 300;
 }
 
 .roi-title {
+  font-family: 'Sora', sans-serif;
   font-size: clamp(2rem, 5vw, 3.5rem);
   font-weight: 700;
   color: var(--color-text);
