--- a/sections/ai_creative_suite/ai_creative_suite.html
+++ b/sections/ai_creative_suite/ai_creative_suite.html
@@ -20,12 +20,13 @@
   }
 
   .ai-creative-suite-label {
+    font-family: 'Sora', sans-serif;
     font-size: 1.25rem;
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: var(--color-text-secondary);
     margin-bottom: var(--spacing-sm);
-    font-weight: 600;
+    font-weight: 300;
   }
 
   .ai-creative-suite-title {
@@ -102,11 +103,12 @@
   }
 
   .ai-creative-suite-content-label {
+    font-family: 'Sora', sans-serif;
     font-size: 1.2rem;
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: var(--color-text-secondary);
-    font-weight: 600;
+    font-weight: 300;
   }
 
   .ai-creative-suite-content-title {
@@ -118,6 +120,7 @@
 
   /* 按钮 - 更深灰色，白色字体，更大圆角，更大字体 */
   .ai-creative-suite-button {
+    font-family: 'Sora', sans-serif;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -128,7 +131,7 @@
     /* 白色字体 */
     font-size: 1.125rem;
     /* 更大的字体 */
-    font-weight: 600;
+    font-weight: 300;
     border-radius: 40px;
     /* 更圆的角 */
     text-decoration: none;
