--- a/sections/calculator/calculator.html
+++ b/sections/calculator/calculator.html
@@ -16,7 +16,6 @@
   /* 标题区域 */
   .calculator-header {
     text-align: center;
-    margin-bottom: var(--spacing-3xl);
   }
 
   .calculator-title {
@@ -28,7 +27,9 @@
   }
 
   .calculator-subtitle {
+    font-family: 'Sora', sans-serif;
     font-size: clamp(1rem, 2vw, 1.5rem);
+    font-weight: 300;
     color: var(--color-text-secondary);
     line-height: 1.6;
     max-width: 900px;
