--- a/sections/navigation/navigation.html
+++ b/sections/navigation/navigation.html
@@ -496,7 +496,7 @@
           </div>
         </li>
         <li class="nav-item-dropdown">
-          <a href="#solutions">Solutions</a>
+          <a href="solutions.html">Solutions</a>
           <!-- Solutions 下拉面板 -->
           <div class="nav-dropdown">
             <div class="dropdown-container solutions-dropdown">
