--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
   <!-- Lenis Smooth Scroll -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lenis@1.2.3/dist/lenis.css">
@@ -525,7 +526,7 @@
           </div>
         </li>
         <li class="nav-item-dropdown">
-          <a href="#solutions">Solutions</a>
+          <a href="solutions.html">Solutions</a>
           <!-- Solutions 下拉面板 -->
           <div class="nav-dropdown">
             <div class="dropdown-container solutions-dropdown">
