--- a/sections/banner/banner.html
+++ b/sections/banner/banner.html
@@ -121,7 +121,7 @@
 /* 3. 右上角描述区 */
 .banner-right {
   position: absolute; /* 相对于 banner-container 定位 */
-  bottom: calc(-22rem + 120px + 4rem); /* 距离底部 = 卡片底部间距 + 卡片高度 + 间距 */
+  bottom: calc(-22rem + 120px + 3rem); /* 下移描述框：从 4rem 改为 2rem */
   right: 3rem; /* 距离浏览器右边缘固定距离 */
   display: flex;
   flex-direction: column;
@@ -129,19 +129,56 @@
   z-index: 3;
 }
 
-/* 描述文本框 - 灰色背景 + 白色文字，与下方卡片容器等宽 */
+/* 描述文本框 - 灰色背景 + 白色文字 */
 .description-text {
-  font-size: 0.875rem;
-  line-height: 1.8;
-  color: white; /* 白色文字 */
+  font-size: 0.5rem; /* 减小字体：从 0.875rem (14px) 改为 0.75rem (12px) */
+  line-height: 1.6; /* 相应调整行高 */
+  color: rgb(230, 229, 229); /* 白色文字 */
   margin: 0;
-  padding: var(--spacing-md) var(--spacing-lg); /* 减小内边距 */
-  background: rgba(24, 24, 24, 0.5); /* 灰色半透明背景 */
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 12px;
+  padding: 20px 0 0 20px; /* 只要左边距和上边距：上 右 下 左 */
+  background: rgba(68, 68, 68, 0.451); /* 灰色半透明背景 */
+  border: none; /* 移除边框 */
+  border-radius: 18px; /* 增加圆角：从 12px 改为 18px */
   backdrop-filter: blur(1px);
-  width: calc(90px * 5 + 0.75rem * 4); /* 精确匹配5个卡片的总宽度：90px * 5 + 间距 0.75rem * 4 */
+  width: 463px; /* 固定宽度 */
+  height: 113px; /* 固定高度 */
+  overflow-y: auto; /* 内容超出时显示滚动条 */
   box-sizing: border-box;
+  position: relative; /* 为绝对定位的图标按钮提供参考 */
+}
+
+/* 右下角生成图标按钮 */
+.generate-icon-btn {
+  position: absolute;
+  bottom: 5px; /* 减少下边距：从 10px 改为 5px */
+  right: 5px; /* 减少右边距：从 10px 改为 5px */
+  width: 32px;
+  height: 32px;
+  background: rgba(32, 31, 31, 0.9); /* 更黑的背景：从 rgba(40, 40, 40, 0.8) 改为 rgba(20, 20, 20, 0.9) */
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 16px; /* 增大圆角：从 8px 改为 12px */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  z-index: 10;
+}
+
+.generate-icon-btn:hover {
+  background: rgba(60, 60, 60, 0.9);
+  border-color: rgba(255, 255, 255, 0.4);
+  transform: scale(1.05);
+}
+
+.generate-icon-btn svg {
+  width: 18px;
+  height: 18px;
+  fill: none;
+  stroke: white;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
 }
 
 .tools-tags {
@@ -167,7 +204,7 @@
 
 .video-cards-grid {
   display: flex;
-  gap: 0.75rem;
+  gap: 0.88rem; /* 减小间距：从 0.75rem 改为 0.5rem */
   flex-wrap: nowrap; /* 禁止换行 */
   align-items: flex-end; /* 标题和卡片底部对齐 */
 }
@@ -182,7 +219,7 @@
 
 /* 卡片标题（显示在卡片下方）*/
 .card-title {
-  font-size: 0.75rem;
+  font-size: 0.6rem; /* 减小字体：从 0.75rem 改为 0.65rem */
   font-weight: 600;
   color: var(--color-text);
   text-align: left; /* 左侧对齐 */
@@ -199,9 +236,9 @@
 /* 背景切换卡片 - 更长的高度 */
 .video-card {
   position: relative;
-  width: 90px;
-  height: 120px; /* 调整高度，更紧凑 */
-  border-radius: 6px;
+  width: 81px; /* 减小宽度：从 90px 改为 70px */
+  height: 108px; /* 减小高度：从 120px 改为 100px */
+  border-radius: 4px; /* 减小圆角：从 6px 改为 3px */
   overflow: hidden;
   cursor: pointer;
   background: var(--color-bg-secondary);
@@ -345,8 +382,17 @@
 
     <!-- 右上角描述区 -->
     <div class="banner-right">
-      <p class="description-text">
-        A cinematic 4K video of a lone astronaut walking across the lunar surface under deep space darkness. The camera captures the dusty ground and intricate spacesuit details, creating a quiet, otherworldly atmosphere.
+      <p class="description-text" id="bannerDescription">
+        ultra-realistic close-up of an astronaut in a detailed white space suit, standing in the darkness of outerspace. the visor reflects a softly lit spacecraft with warm yellow-white highlights. intricate textures onthe suit folds, metallic connectors, and scuffed surfaces show wear and realism. the background is pitchblack, creating dramatic contrast and focus on the helmet reflection.
+
+        <!-- 右下角生成图标按钮 -->
+        <button class="generate-icon-btn" id="generateBtn" title="Generate new description">
+          <svg viewBox="0 0 24 24">
+            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+            <path d="M12 8v8M8 12h8"></path>
+            <circle cx="18" cy="6" r="3" fill="white" stroke="none"></circle>
+          </svg>
+        </button>
       </p>
 
     </div>
@@ -444,6 +490,74 @@
         // 触摸设备上也触发点击事件
         card.click();
       });
+    });
+  }
+
+  // ========================================
+  // 文字生成功能
+  // ========================================
+
+  // 预设的描述文本数组
+  const descriptions = [
+    'ultra-realistic close-up of an astronaut in a detailed white space suit, standing in the darkness of outerspace. the visor reflects a softly lit spacecraft with warm yellow-white highlights. intricate textures onthe suit folds, metallic connectors, and scuffed surfaces show wear and realism. the background is pitchblack, creating dramatic contrast and focus on the helmet reflection.',
+    'A cinematic view of Earth from space, with swirling clouds and deep blue oceans. The curvature of the planet creates a stunning horizon line against the black void. City lights twinkle across the night side, while the day side glows with vibrant colors of land and sea.',
+    'An ethereal nebula with vibrant purples, pinks, and blues forming cosmic clouds. Stars of varying brightness dot the scene, creating depth and wonder. Wispy gas formations spiral elegantly through space, illuminated by distant stellar light.',
+    'A futuristic space station orbiting a distant planet. Solar panels extend like wings, catching starlight. Windows glow with warm interior lighting. The station\'s modular design shows advanced engineering against the backdrop of a ringed gas giant.',
+    'Deep space view showcasing countless galaxies, each a swirling collection of billions of stars. The vastness creates a humbling perspective, with spiral and elliptical galaxies visible at various distances. Cosmic dust creates subtle hazes between celestial bodies.'
+  ];
+
+  let currentDescIndex = 0;
+  let isGenerating = false;
+
+  // 获取生成按钮和描述文本元素
+  const generateBtn = document.getElementById('generateBtn');
+  const descriptionText = document.getElementById('bannerDescription');
+
+  // 打字机效果函数
+  function typeWriter(text, element, speed = 20) {
+    return new Promise((resolve) => {
+      let i = 0;
+      // 清空当前内容（保留按钮）
+      const button = element.querySelector('.generate-icon-btn');
+      element.textContent = '';
+      if (button) element.appendChild(button);
+
+      function type() {
+        if (i < text.length) {
+          // 在按钮前插入文字
+          const textNode = document.createTextNode(text.charAt(i));
+          element.insertBefore(textNode, button);
+          i++;
+          setTimeout(type, speed);
+        } else {
+          resolve();
+        }
+      }
+      type();
+    });
+  }
+
+  // 生成按钮点击事件
+  if (generateBtn && descriptionText) {
+    generateBtn.addEventListener('click', async function(e) {
+      e.preventDefault();
+
+      if (isGenerating) return; // 防止重复点击
+
+      isGenerating = true;
+      generateBtn.style.opacity = '0.5';
+      generateBtn.style.pointerEvents = 'none';
+
+      // 切换到下一个描述
+      currentDescIndex = (currentDescIndex + 1) % descriptions.length;
+      const newText = descriptions[currentDescIndex];
+
+      // 执行打字机效果
+      await typeWriter(newText, descriptionText, 15);
+
+      isGenerating = false;
+      generateBtn.style.opacity = '1';
+      generateBtn.style.pointerEvents = 'auto';
     });
   }
 })();
