--- a/index.html
+++ b/index.html
@@ -3835,7 +3835,7 @@
   color: var(--color-text);
   position: absolute;
   bottom: 80px; /* 和数字同一高度 */
-  left: 40px; /* 比数字多10px（数字30px + 10px） */
+  left: 68px; 
   z-index: 3;
   transition: opacity 0.3s ease,
               bottom 0.5s cubic-bezier(0.4, 0, 0.2, 1),
@@ -3845,7 +3845,7 @@
 /* 悬浮时标题稍微下移 */
 .workflow__card:hover .workflow__card-title {
   bottom: 60px; /* 和数字同步下移到60px */
-  left: 40px; /* 保持左边距 */
+  left: 68px; /* 保持左边距 */
 }
 
 /* 描述文字样式 */
