--- a/sections/ai_solutions/ai_solutions.html
+++ b/sections/ai_solutions/ai_solutions.html
@@ -72,10 +72,11 @@
     min-height: 70vh;
     flex: 1;
     width: 100%;
+    padding: 0 40px;
   }
 
   .ai-solutions-image {
-    width: 95%;
+    width: 100%;
     max-width: 100%;
     height: auto;
     object-fit: contain;
@@ -113,7 +114,7 @@
 
     .ai-solutions-title {
       font-size: clamp(1rem, 5vw, 2rem);
-      max-width: 75%;
+      max-width: 80%;
       white-space: normal;
       margin-bottom: var(--spacing-md);
       line-height: 1.6;
@@ -128,7 +129,7 @@
 
     .ai-solutions-image-container {
       min-height: auto;
-      padding: var(--spacing-sm) 0 var(--spacing-2xl);
+      padding: var(--spacing-sm) 40px var(--spacing-2xl);
     }
 
     .ai-solutions-trust-text {
@@ -165,7 +166,7 @@
     }
 
     .ai-solutions-image-container {
-      padding: var(--spacing-xs) 0 var(--spacing-lg);
+      padding: var(--spacing-xs) 20px var(--spacing-lg);
     }
 
     .ai-solutions-trust-text {
