--- a/sections/create/create.html
+++ b/sections/create/create.html
@@ -1,7 +1,7 @@
-<!-- ===== COMPOSE 模块 ===== -->
+<!-- ===== CREATE 模块 ===== -->
 <style>
-  /* Compose Section Styles - Hero Section with Image Background */
-  .compose {
+  /* Create Section Styles - Hero Section with Image Background */
+  .create {
     padding: 0;
     background: var(--color-bg);
     position: relative;
@@ -11,7 +11,7 @@
     overflow: hidden;
   }
 
-  .compose-container {
+  .create-container {
     max-width: 100%;
     margin: 0 auto;
     padding: var(--spacing-lg) 40px;
@@ -24,7 +24,7 @@
   }
 
   /* 背景图片容器 - 近乎全屏的圆角图片 */
-  .compose-background {
+  .create-background {
     position: relative;
     width: 100%;
     max-width: 100%;
@@ -35,29 +35,29 @@
     z-index: 0;
   }
 
-  .compose-background-image {
+  .create-background-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: block;
   }
 
-  /* 内容覆盖层 - 定位在左下角，减少空隙 */
-  .compose-content {
+  /* 内容覆盖层 - 定位在左上角 */
+  .create-content {
     position: absolute;
-    bottom: var(--spacing-lg);
+    top: var(--spacing-lg);
     left: var(--spacing-lg);
     z-index: 2;
     max-width: 600px;
   }
 
   /* 文字区域 */
-  .compose-text-wrapper {
+  .create-text-wrapper {
     width: 146%;
   }
 
   /* 像素风格标题 - 放大字体，不换行，舒展 */
-  .compose-title {
+  .create-title {
     font-family: 'Press Start 2P', cursive;
     font-size: clamp(1.2rem, 4vw, 2.5rem);
     font-weight: 400;
@@ -76,7 +76,7 @@
   }
 
   /* 描述文字 - Sora 细体，减小字号 */
-  .compose-description {
+  .create-description {
     font-family: 'Sora', sans-serif;
     width: 48%;
     font-size: clamp(0.85rem, 1.5vw, 1rem);
@@ -88,7 +88,7 @@
   }
 
   /* START ENGINE 按钮 */
-  .compose-button {
+  .create-button {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -105,7 +105,7 @@
     cursor: pointer;
   }
 
-  .compose-button:hover {
+  .create-button:hover {
     background: rgba(255, 255, 255, 1);
     transform: translateY(-2px);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -113,54 +113,54 @@
 
   /* 响应式设计 */
   @media (max-width: 991px) {
-    .compose-container {
+    .create-container {
       padding: var(--spacing-md) 40px;
     }
 
-    .compose-background {
+    .create-background {
       width: 98%;
       height: 85vh;
       min-height: 500px;
     }
 
-    .compose-content {
-      bottom: var(--spacing-md);
+    .create-content {
+      top: var(--spacing-md);
       left: var(--spacing-md);
       max-width: 80%;
     }
 
-    .compose-title {
+    .create-title {
       font-size: clamp(0.9rem, 5vw, 1.8rem);
       letter-spacing: 0.12em;
       margin-bottom: var(--spacing-sm);
       white-space: nowrap;
     }
 
-    .compose-description {
+    .create-description {
       font-size: clamp(0.8rem, 2vw, 0.95rem);
       margin-bottom: var(--spacing-md);
     }
   }
 
   @media (max-width: 767px) {
-    .compose-container {
+    .create-container {
       padding: var(--spacing-sm) 20px;
     }
 
-    .compose-background {
+    .create-background {
       width: 100%;
       height: 80vh;
       min-height: 400px;
       border-radius: 16px;
     }
 
-    .compose-content {
-      bottom: var(--spacing-sm);
+    .create-content {
+      top: var(--spacing-sm);
       left: var(--spacing-sm);
       max-width: 85%;
     }
 
-    .compose-title {
+    .create-title {
       font-size: clamp(0.7rem, 6vw, 1.2rem);
       letter-spacing: 0.1em;
       line-height: 1.4;
@@ -168,13 +168,13 @@
       white-space: nowrap;
     }
 
-    .compose-description {
+    .create-description {
       font-size: clamp(0.75rem, 2.5vw, 0.85rem);
       line-height: 1.5;
       margin-bottom: var(--spacing-md);
     }
 
-    .compose-button {
+    .create-button {
       padding: var(--spacing-sm) var(--spacing-lg);
       font-size: 0.9rem;
     }
@@ -182,28 +182,28 @@
 </style>
 
 <!-- HTML 结构 -->
-<section class="compose" id="compose">
-  <div class="compose-container">
+<section class="create" id="create">
+  <div class="create-container">
     <!-- 背景图片容器 -->
-    <div class="compose-background">
-      <img src="sections/compose/bg.jpg" alt="Compose Background" class="compose-background-image" loading="eager">
+    <div class="create-background">
+      <img src="sections/create/bg.jpg" alt="Create Background" class="create-background-image" loading="eager">
 
-      <!-- 内容覆盖层 - 定位在左下角 -->
-      <div class="compose-content">
-        <div class="compose-text-wrapper">
+      <!-- 内容覆盖层 - 定位在左上角 -->
+      <div class="create-content">
+        <div class="create-text-wrapper">
           <!-- 标题 -->
-          <h1 class="compose-title">
-            COMPOSE YOUR STORY
+          <h1 class="create-title">
+            CREATE YOUR STORY
           </h1>
 
           <!-- 描述 -->
-          <p class="compose-description">
+          <p class="create-description">
             Bring ideas to life frame by frame — arrange scenes, refine pacing, and craft cinematic flow with the
             Eclipse Engine.
           </p>
 
           <!-- 按钮 -->
-          <a href="#" class="compose-button">START ENGINE</a>
+          <a href="#" class="create-button">START ENGINE</a>
         </div>
       </div>
     </div>
@@ -211,13 +211,13 @@
 </section>
 
 <script>
-  // Compose 模块交互逻辑
+  // Create 模块交互逻辑
   (function () {
     'use strict';
 
-    const initCompose = () => {
+    const initCreate = () => {
       // 图片加载错误处理
-      const bgImage = document.querySelector('.compose-background-image');
+      const bgImage = document.querySelector('.create-background-image');
       if (bgImage) {
         bgImage.addEventListener('error', function () {
           console.warn(`Failed to load background image: ${this.src}`);
@@ -229,9 +229,10 @@
 
     // DOM 加载后初始化
     if (document.readyState === 'loading') {
-      document.addEventListener('DOMContentLoaded', initCompose);
+      document.addEventListener('DOMContentLoaded', initCreate);
     } else {
-      initCompose();
+      initCreate();
     }
   })();
 </script>
+
