1. 封面侧边距3rem; 2. create页面引用图片.

--- a/sections/ai_solutions/ai_solutions.html
+++ b/sections/ai_solutions/ai_solutions.html
@@ -41,7 +41,7 @@
     margin-bottom: var(--spacing-lg);
     text-align: center;
     letter-spacing: 0.05em;
-    max-width: 75%;
+    max-width: 80%;
     margin-left: auto;
     margin-right: auto;
     /* 允许换行 */
@@ -72,7 +72,7 @@
     min-height: 70vh;
     flex: 1;
     width: 100%;
-    padding: 0 40px;
+    box-sizing: border-box;
   }
 
   .ai-solutions-image {
@@ -82,6 +82,7 @@
     object-fit: contain;
     border-radius: 12px;
     display: block;
+    box-sizing: border-box;
   }
 
   /* 图片下方的信任文字 */
@@ -129,7 +130,7 @@
 
     .ai-solutions-image-container {
       min-height: auto;
-      padding: var(--spacing-sm) 40px var(--spacing-2xl);
+      padding: var(--spacing-sm) 3rem var(--spacing-2xl);
     }
 
     .ai-solutions-trust-text {
@@ -166,7 +167,7 @@
     }
 
     .ai-solutions-image-container {
-      padding: var(--spacing-xs) 20px var(--spacing-lg);
+      padding: var(--spacing-xs) 1.5rem var(--spacing-lg);
     }
 
     .ai-solutions-trust-text {
