--- a/sections/pic_wall/pic_wall.html
+++ b/sections/pic_wall/pic_wall.html
@@ -75,28 +75,28 @@
   <div class="pic-wall-container">
     <div class="pic-wall-grid">
       <div class="pic-wall-item">
-        <img src="sections/pic_wall/1.jpg" alt="Pic Wall 1" class="pic-wall-image" loading="lazy">
+        <img src="images/1.png" alt="Pic Wall 1" class="pic-wall-image" loading="lazy">
       </div>
       <div class="pic-wall-item">
-        <img src="sections/pic_wall/2.jpg" alt="Pic Wall 2" class="pic-wall-image" loading="lazy">
+        <img src="images/2.jpg" alt="Pic Wall 2" class="pic-wall-image" loading="lazy">
       </div>
       <div class="pic-wall-item">
-        <img src="sections/pic_wall/3.jpg" alt="Pic Wall 3" class="pic-wall-image" loading="lazy">
+        <img src="images/3.png" alt="Pic Wall 3" class="pic-wall-image" loading="lazy">
       </div>
       <div class="pic-wall-item">
-        <img src="sections/pic_wall/4.jpg" alt="Pic Wall 4" class="pic-wall-image" loading="lazy">
+        <img src="images/4.png" alt="Pic Wall 4" class="pic-wall-image" loading="lazy">
       </div>
       <div class="pic-wall-item">
-        <img src="sections/pic_wall/5.jpg" alt="Pic Wall 5" class="pic-wall-image" loading="lazy">
+        <img src="images/5.png" alt="Pic Wall 5" class="pic-wall-image" loading="lazy">
       </div>
       <div class="pic-wall-item">
-        <img src="sections/pic_wall/6.jpg" alt="Pic Wall 6" class="pic-wall-image" loading="lazy">
+        <img src="images/logo.jpg" alt="Pic Wall 6" class="pic-wall-image" loading="lazy">
       </div>
       <div class="pic-wall-item">
-        <img src="sections/pic_wall/7.jpg" alt="Pic Wall 7" class="pic-wall-image" loading="lazy">
+        <img src="images/1.png" alt="Pic Wall 7" class="pic-wall-image" loading="lazy">
       </div>
       <div class="pic-wall-item">
-        <img src="sections/pic_wall/8.jpg" alt="Pic Wall 8" class="pic-wall-image" loading="lazy">
+        <img src="images/2.jpg" alt="Pic Wall 8" class="pic-wall-image" loading="lazy">
       </div>
     </div>
   </div>
