--- a/sections/style_cea/style_cea.html
+++ b/sections/style_cea/style_cea.html
@@ -22,14 +22,21 @@
     font-size: 1.5rem;
     font-weight: 300;
   }
+
+  .style-cea-image {
+    width: 100%;
+    max-width: 1200px;
+    height: auto;
+    border-radius: 16px;
+    margin: 0 auto;
+    display: block;
+  }
 </style>
 
 <!-- HTML 结构 -->
 <section class="style-cea" id="style-cea">
   <div class="style-cea-container">
-    <div class="style-cea-placeholder">
-      Style CEA Module - 稍后细化
-    </div>
+    <img src="images/4.png" alt="Style CEA" class="style-cea-image" loading="lazy">
   </div>
 </section>
 
