--- a/sections/built_for_speed/built_for_speed.html
+++ b/sections/built_for_speed/built_for_speed.html
@@ -22,14 +22,21 @@
     font-size: 1.5rem;
     font-weight: 300;
   }
+
+  .built-for-speed-image {
+    width: 100%;
+    max-width: 1200px;
+    height: auto;
+    border-radius: 16px;
+    margin: 0 auto;
+    display: block;
+  }
 </style>
 
 <!-- HTML 结构 -->
 <section class="built-for-speed" id="built-for-speed">
   <div class="built-for-speed-container">
-    <div class="built-for-speed-placeholder">
-      Built For Speed Module - 稍后细化
-    </div>
+    <img src="images/3.png" alt="Built For Speed" class="built-for-speed-image" loading="lazy">
   </div>
 </section>
 
