--- a/sections/create/create.html
+++ b/sections/create/create.html
@@ -13,8 +13,8 @@
 
   .create-container {
     max-width: 100%;
-    margin: 0 auto;
-    padding: var(--spacing-lg) 40px;
+    margin: 1.5rem auto;
+    padding: var(--spacing-lg) 3rem;
     width: 100%;
     position: relative;
     min-height: 100vh;
@@ -33,6 +33,7 @@
     border-radius: 24px;
     overflow: hidden;
     z-index: 0;
+    box-sizing: border-box;
   }
 
   .create-background-image {
@@ -40,6 +41,7 @@
     height: 100%;
     object-fit: cover;
     display: block;
+    box-sizing: border-box;
   }
 
   /* 内容覆盖层 - 定位在左上角 */
@@ -114,7 +116,7 @@
   /* 响应式设计 */
   @media (max-width: 991px) {
     .create-container {
-      padding: var(--spacing-md) 40px;
+      padding: var(--spacing-md) 3rem;
     }
 
     .create-background {
@@ -144,7 +146,7 @@
 
   @media (max-width: 767px) {
     .create-container {
-      padding: var(--spacing-sm) 20px;
+      padding: var(--spacing-sm) 1.5rem;
     }
 
     .create-background {
@@ -186,7 +188,7 @@
   <div class="create-container">
     <!-- 背景图片容器 -->
     <div class="create-background">
-      <img src="sections/create/bg.jpg" alt="Create Background" class="create-background-image" loading="eager">
+      <img src="images/2.jpg" alt="Create Background" class="create-background-image" loading="eager">
 
       <!-- 内容覆盖层 - 定位在左上角 -->
       <div class="create-content">
@@ -235,4 +237,3 @@
     }
   })();
 </script>
-
